apps/invokeai_cpu/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invokeai-deployment
  namespace: invokeai
  labels:
    app: invokeai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invokeai
  template:
    metadata:
      labels:
        app: invokeai
    spec:
      nodeSelector:
        node.kubernetes.io/gpu: "true"
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      containers:
      - name: invokeai
        image: mauwii/invokeai:latest
        ports:
        - containerPort: 9090
        command: ["invokeai"]
        args: ["--web", "--host", "0.0.0.0", "--port", "9090","--cors", "https://invokeai.hello-world-domain.com", "--no-nsfw_checker"]
        resources:
          requests:
            memory: "4Gi"
            cpu: "1"
            ephemeral-storage: "16Gi"
            nvidia.com/gpu: "1"
          limits:
            memory: "8Gi"
            cpu: "2"
            ephemeral-storage: "16Gi"
            nvidia.com/gpu: "1"
        volumeMounts:
        - mountPath: "/home/appuser/efs/invokeai/outputs"
          name: efs-volume
        - mountPath: "/data"
          name: config-dir
      volumes:
      - name: efs-volume
        persistentVolumeClaim:
          claimName: efs-pvc
      - name: init-config
        configMap:
          name: invokeai-init-config
      - name: config-dir
        emptyDir: {}
