apps/invokeai_cpu/base/nvidia-smi.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nvidia-smi
  namespace: invokeai
spec:
  hostIPC: true
  restartPolicy: OnFailure
  tolerations:
  - key: "nvidia.com/gpu"
    operator: "Equal"
    value: "true"
    effect: "NoSchedule"
  containers:
  - name: nvidia-smi
    image: nvidia/cuda:12.5.0-runtime-ubuntu20.04
    args:
    - "nvidia-smi"
    resources:
      limits:
        nvidia.com/gpu: 0
