apps/invokeai_cpu/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invokeai
  namespace: invokeai
spec:
  ports:
  - port: 80
    targetPort: 9090
    protocol: TCP
  selector:
    app: invokeai
